Fixed overflow

--- a/css/index.css
+++ b/css/index.css
@@ -79,6 +79,7 @@ button.hamburger {
 	position: relative;
     padding: 67px;
     min-height: 400px;
+    overflow-y: hidden;
 }
 
 .container p {
